--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,36 +7,48 @@
     android:divider="@android:drawable/divider_horizontal_dark"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/karousel"
-        android:contentDescription="@string/app_name"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/farmer"
-        android:padding="20sp"/>
+        android:id="@+id/scv"
+        android:fillViewport="true">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/view"
-        style="@style/kbutton"
-        android:text="@string/view_products"/>
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical">
+           <ImageView
+               android:id="@+id/karousel"
+               android:contentDescription="@string/app_name"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:adjustViewBounds="true"
+               android:src="@drawable/farmer"
+               android:padding="20sp"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/p2"
-        style="@style/kbutton"
-        android:text="@string/placeholder"/>
+           <Button
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:id="@+id/view"
+               style="@style/kbutton"
+               android:text="@string/view_products"/>
+
+           <Button
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:id="@+id/p2"
+               style="@style/kbutton"
+               android:text="@string/placeholder"/>
 
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/p1"
-        style="@style/kbutton"
-        android:text="@string/placeholder"/>
+           <Button
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:id="@+id/p1"
+               style="@style/kbutton"
+               android:text="@string/placeholder"/>
 
 
+       </LinearLayout>
+    </ScrollView>
 </LinearLayout>
