--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/p2"
                 style="@style/kbutton"
+                android:onClick="show"
                 android:text="market details"/>
 
 
